--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,12 +5,14 @@
         <div id="container">
             <h3>Configuración de Cuenta</h3>
             <hr>
+            <form id="myform" name="myform" enctype="multipart/form-data" method="post">
+            <input type="hidden" value="1" id="paso"/>
             <div class="bloque">
                 <div class="subtitulo">Cargar lista de contactos para asignar Bonos</div>
                 <span class="etiqueta">Importar desde CSV</span>
                 <br>
                 <label class="custom-file">
-                    <input type="file" id="file" class="custom-file-input">
+                    <input type="file" id="file" name="file" class="custom-file-input">
                     <span class="custom-file-control"></span>
                 </label>
                 <div class="nota">Si tienes problemas para subir tu CSV. Aseg&uacute;rate de que tu hoja de c&aacute;lculo est&eacute; formateada correctamente. Descargar <a href="../csvcustomer/carga_customer_example.csv" class="link-down">CSV de Ejemplo</a></div>
@@ -18,14 +20,12 @@
             <div class="bloque">
                 <span class="etiqueta">O Copiar/Arrastrar Archivo</span>
                 <div class="form-group col-md-4 arrastra">
-                    <textarea class="form-control" rows="5" id="comment"></textarea>
+                    <textarea class="form-control" rows="5" id="comment" name="comment"></textarea>
                 </div>
                 <div class="nota">Si tienes problemas para subir tu CSV. Aseg&uacute;rate de que tu hoja de c&aacute;lculo est&eacute; formateada correctamente. Descargar <a href="../csvcustomer/carga_customer_example.csv" class="link-down">CSV de Ejemplo</a></div>
             </div>
+            </form>
         </div>
-    </div>
-    <div class="footer">
-        <a href="#"><button type="button" id="siguiente" class="btn btn-default btn-md">SIGUIENTE PASO</button></a>
     </div>
     <script>
         $('#file').on('change',function(){
