-Se retira el Footer de la Página Principal -Se actualizan Bundles de Web -Se Incluye Logo Banco de Occidente en plantilla de correo -Se configura el correo a utilizar en el proceso

--- a/app/Resources/views/email/assign.html.twig
+++ b/app/Resources/views/email/assign.html.twig
@@ -7,7 +7,8 @@
                 <table class="table" style="width: 100%;" bgcolor="#ffffff"><!--Header-->
                     <tbody>
                         <tr>
-                            <td style="width: 100%; background: #eaeaea; padding: 7px 0;"><a style="color: #337ff1;" title="{shop_name}" href="{shop_url}"> <img class="logo" style="margin: 10px 0 5px 15px;" src="https://gallery.mailchimp.com/e63d3ec47059b6abdf6a36c8f/images/29f18bc0-adb2-4f93-b0c4-f593b796cc92.png" alt="fluz fluz" width="200" /></a></td>
+                            <td style="width: 100%; background: #FFF; padding: 7px 0;"><a style="color: #337ff1;" title="{shop_name}" href="{shop_url}"> <img class="logo" style="margin: 10px 0 5px 15px;" src="https://gallery.mailchimp.com/e63d3ec47059b6abdf6a36c8f/images/29f18bc0-adb2-4f93-b0c4-f593b796cc92.png" alt="fluz fluz" width="200" /></a></td>
+                            <td style="width: 100%; background: #FFF; padding: 7px 0;"><a style="color: #337ff1;" title="{shop_name}" href="{shop_url}"> <img class="logo" style="margin: 10px 0 5px 15px;" src="https://s3.amazonaws.com/ingenio/felipeqn/FluzFluz/banco-de-occidente.jpg" alt="fluz fluz" width="200" /></a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -67,7 +68,7 @@
                                                     </tr>
                                                     <tr>
                                                         <td style="border-top: 1px solid #333; font-size:11px; text-align: center; color: #000; padding: 7px 0;" colspan="7">
-                                                            <img src="https://gallery.mailchimp.com/e63d3ec47059b6abdf6a36c8f/images/82d277cb-7ad4-4d3d-a1e2-1d6d61204cc6.png" style="max-width:70px; margin:auto; padding-bottom:15px;"><br>
+                                                            <img src="https://gallery.mailchimp.com/e63d3ec47059b6abdf6a36c8f/images/82d277cb-7ad4-4d3d-a1e2-1d6d61204cc6.png" style="max-width:90px; margin:auto; padding-bottom:15px;"><br>
                                                                 <strong>NIKE FACTORY I BARRANQUILLA:</strong>
                                                                 CENTRO COMERCIAL ÚNICO LOCAL 3
                                                                 BARRANQUILLA
@@ -118,7 +119,7 @@
                                                                 CC FONTANAR
                                                                 CHÍA
                                                                 <br><br>
-                                                                <img src="https://gallery.mailchimp.com/e63d3ec47059b6abdf6a36c8f/images/1f5cf3eb-e7ea-415a-975a-51feb65a8bf4.png" style="max-width:50px; margin:auto; padding-bottom:15px;"><br>
+                                                                <img src="https://gallery.mailchimp.com/e63d3ec47059b6abdf6a36c8f/images/1f5cf3eb-e7ea-415a-975a-51feb65a8bf4.png" style="max-width:215px; margin:auto; padding-bottom:15px;"><br>
 
                                                                 <strong>SPORT LINE</strong>
                                                                 CC PORTAL DEL PRADO
