--- a/app/Resources/views/member/listmembers.html.twig
+++ b/app/Resources/views/member/listmembers.html.twig
@@ -43,6 +43,14 @@
             </form>
         </div>
     </div>
+    <div class="row blanca">
+        <div class="col-md-12">
+            <img class="pull-right img-responsive" src="{{asset('images/banco-de-occidente.jpg')}}" />
+        </div>
+    </div>
+    <div class="footer">
+        <button type="button" id="siguiente" class="btn btn-default btn-md">SIGUIENTE PASO</button>
+    </div>
     <script>
            $(document).ready(function(){
                $('.table').DataTable({
