--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -27,6 +27,17 @@
             {{ form_end(form) }}
         </div>
     </div>
+    <div class="row blanca">
+        <div class="col-md-12">
+            <img class="pull-right img-responsive" src="{{asset('images/banco-de-occidente.jpg')}}" />
+        </div>
+    </div>
+    <div class="footer">
+        <button type="button" id="siguiente" class="btn btn-default btn-md">SIGUIENTE PASO</button>
+    </div>
+    <div id="dialog" title="Elije un Archivo" style="display:none;">
+        <p>Aun no haz seleccionado un archivo. Por Favor elije un archivo CSV para continuar.</p>
+    </div>
     <script>
         $('#form_file').on('change',function(){
             var route =$(this).val();
