-Modificación para realizar asignación masiva de bonos -Cambio en Plantilla de Correo electrónico con Logos de Credencial y Banco de Occidente -Mejoras en Diseño de Formulario de Asignación -Se incluyen las librerías de terceros (datatables, jqueryUI)

--- a/app/Resources/views/email/assign.html.twig
+++ b/app/Resources/views/email/assign.html.twig
@@ -7,22 +7,21 @@
                 <table class="table" style="width: 100%;" bgcolor="#ffffff"><!--Header-->
                     <tbody>
                         <tr>
-                            <td style="width: 100%; background: #FFF; padding: 7px 0;"><a style="color: #337ff1;" title="{shop_name}" href="{shop_url}"> <img class="logo" style="margin: 10px 0 5px 15px;" src="https://gallery.mailchimp.com/e63d3ec47059b6abdf6a36c8f/images/29f18bc0-adb2-4f93-b0c4-f593b796cc92.png" alt="fluz fluz" width="200" /></a></td>
-                            <td style="width: 100%; background: #FFF; padding: 7px 0;"><a style="color: #337ff1;" title="{shop_name}" href="{shop_url}"> <img class="logo" style="margin: 10px 0 5px 15px;" src="https://s3.amazonaws.com/ingenio/felipeqn/FluzFluz/banco-de-occidente.jpg" alt="fluz fluz" width="200" /></a></td>
+                            <td style="width: 100%; background: #FFF;" colspan="2"><a style="color: #337ff1;" title="{shop_name}" href="{shop_url}"> <img class="logo" style="margin: 5px 0 5px 5px;" src="https://s3.amazonaws.com/ingenio/felipeqn/FluzFluz/credencial.jpg" alt="fluz fluz" width="200" /></a></td>
                         </tr>
                     </tbody>
                 </table>
-                <table style="margin-top: 10px;">
+                <table>
                     <tbody>
                         <tr>
-                            <td style="padding: 7px 0 30px 0;" align="center"><br />
+                            <td style="padding: 7px 0 20px 0;" align="center"><br />
                                 <table class="table" style="width: 100%;" bgcolor="#ffffff">
                                     <tbody>
                                     <tr>
                                     <table class="table" style="width: 100%;" bgcolor="#ffffff">
                                         <tbody>
                                             <tr>
-                                                <span class="title" style="font-weight: 500; font-size: 28px; text-transform: uppercase; line-height: 42px; color: #333; font-family: 'Open Sans', Helvetica Neue, Helvetica, Arial;">Hola {{name}}</span><br />
+                                                <span class="title" style="font-weight: 500; font-size: 28px; text-transform: uppercase; line-height: 20px; color: #333; font-family: 'Open Sans', Helvetica Neue, Helvetica, Arial;">Hola {{name}}</span><br />
                                             </tr>
                                         </tbody>
                                     </table>
@@ -34,7 +33,7 @@
                                                     <tr><!--th bgcolor="#f8f8f8" style="background-color:#fbfbfb;color:#333;font-size:13px;padding:10px;">Referencia</th-->
                                                         <th style="background-color: #fbfbfb; color: #333; font-size: 13px; padding: 10px;" bgcolor="#f8f8f8">Bono</th>
                                                         <th style="background-color: #fbfbfb; color: #333; font-size: 13px; padding: 10px; padding-left: 20px;" bgcolor="#f8f8f8" width="25%">Fecha Expiraci&oacute;n</th>
-                                                        <th style="background-color: #fbfbfb; color: #333; font-size: 13px; padding: 10px;" bgcolor="#f8f8f8" width="17%">Precio&nbsp;Bono</th>
+                                                        <th style="background-color: #fbfbfb; color: #333; font-size: 13px; padding: 10px;" bgcolor="#f8f8f8" width="17%">Valor&nbsp;Bono</th>
                                                         <th style="background-color: #fbfbfb; color: #333; font-size: 13px; padding: 10px;" bgcolor="#f8f8f8">Cantidad</th>
                                                     </tr>
                                                     <tr>
@@ -64,7 +63,7 @@
                                                         <td style="border-top: 1px solid #333; text-align: center; color: #777; padding: 7px 0;" colspan="7">&nbsp;</td>
                                                     </tr>
                                                     <tr>
-                                                        <td style="border-top: 1px solid #333; text-align: center; color: #333; padding: 7px 0; text-transform: uppercase;" colspan="7">Ubicaciones</td>
+                                                        <td style="border-top: 1px solid #333; text-align: center; color: #333; padding: 7px 0; text-transform: uppercase;" colspan="7">Lugares de Redenci&oacute;n</td>
                                                     </tr>
                                                     <tr>
                                                         <td style="border-top: 1px solid #333; font-size:11px; text-align: center; color: #000; padding: 7px 0;" colspan="7">
@@ -233,10 +232,12 @@
                                             </table>
                                         </td>
                                     </tr>-->
-                                    <tr>
-                                        <table>
+                                    <tr>    
+                                    <table>
                                             <tr>
-                                                <td><p style="padding:15px; font-size:11px; text-align:justify;">
+                                                <td>
+<img src="https://s3.amazonaws.com/ingenio/felipeqn/FluzFluz/aval.jpg" style="max-width:100%; margin:auto; padding-bottom:5px;">
+<p style="font-size:8px; text-align:justify;">
         Fluz Fluz Colombia S.A.S. opera como proveedor de la plataforma de distribución digital de bonos electrónicos. Los bonos entregados a los tarjetahabientes de la alianza Banco de Occidente - Bodytech son propiedad del usuario final. La información de los tarjetahabientes del presente convenio es propiedad de los operadores de la alianza (Bodytech y Banco de Occidente), en ningún caso Fluz Fluz Colombia S.A.S. tiene acceso a la misma. Fluz Fluz Colombia S.A.S. no se hace responsable por la pérdida, hurto o mal uso de los códigos entregados a los tarjetahabientes. 
 
         Bonos electrónicos de redención total, en ningún caso se permitirá redención parcial del bono. Aplica para puntos de venta seleccionados de Nike, Under Armour y Sportline América en Colombia, consultar el listado de puntos publicado en este correo. 
